--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -273,7 +273,7 @@
         "session_alert_message": "Atualmente, existe uma sessão ativa em outro dispositivo. Para continuar o acesso, gostaria de encerrar a outra sessão?",
         "jogoResponsavel": "Jogo responsável",
         "tax": "Imposto",
-        "bankAccounts" : "Contas Bancárias"
+        "savedSuccessfully":  "Salvo com sucesso!"
     },
     "bankAccounts": {
         "title" : "Contas Bancárias",
