--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -270,7 +270,8 @@
         "tax": "Impuesto",
         "validatePhone": "Verificación telefónica",
         "savedSuccessfully":  "Guardado exitosamente!",
-        "successfullyDeleted": "Eliminado con éxito!"
+        "successfullyDeleted": "Eliminado con éxito!",
+        "vpn": "Hemos detectado que estás accediendo a nuestro sitio web a través de una VPN. Para garantizar la seguridad e integridad de la plataforma, te pedimos que desactives la VPN o utilices una conexión estándar para continuar. Si crees que esto es un error, por favor contacta al soporte."
     },
     "bankAccounts": {
         "title" : "Bank Accounts",
