--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -275,7 +275,8 @@
         "tax": "Imposto",
         "validatePhone": "Verificação de Telefone",
         "savedSuccessfully":  "Salvo com sucesso!",
-        "successfullyDeleted": "Excluído com sucesso!"
+        "successfullyDeleted": "Excluído com sucesso!",
+        "vpn": "Detectamos que você está acessando nosso site por meio de uma VPN. Para garantir a segurança e a integridade da plataforma, pedimos que você desative a VPN ou utilize uma conexão padrão para continuar. Se você acredita que isso é um erro, entre em contato com o suporte."
     },
     "bankAccounts": {
         "title" : "Contas Bancárias",
