--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -271,7 +271,10 @@
         "validatePhone": "Phone Verification",
         "savedSuccessfully":  "Saved successfully!",
         "successfullyDeleted": "Successfully deleted!",
-        "vpn": "We have detected that you are accessing our website through a VPN. To ensure the security and integrity of the platform, we kindly ask you to disable the VPN or use a standard connection to proceed. If you believe this is an error, please contact support."
+        "vpn": "We have detected that you are accessing our website through a VPN. To ensure the security and integrity of the platform, we kindly ask you to disable the VPN or use a standard connection to proceed. If you believe this is an error, please contact support.",
+        "logoutGeolocationErrorMessage": "You have been logged out for security reasons. We detected an abrupt change in your location that would be physically impossible to occur within the recorded time frame. If this was not caused by you, we recommend verifying your account.",
+        "logoutGeolocationErrorTitle": "Access Interrupted: Inconsistent Location",
+        "logoutGeolocationErrorButtonLabel": "Close"
     },
     "bankAccounts": {
         "title" : "Cuentas bancarias",
