feature: adding new link on footer for puskasbet.com.br

--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -449,6 +449,7 @@
         "politicaAml": "Política AML",
         "jogoResponsavel": "Jogo responsável",
         "termosECondicoes": "Termos e condições",
+        "feedback": "Ouvidoria",
         "todosOsDireitosReservados": "2024 © {{BANCA_NOME}}. Todos os direitos reservados."
     },
     "paginas": {
