--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -439,6 +439,7 @@
         "politicaAml": "Política AML",
         "jogoResponsavel": "Juego responsable",
         "termosECondicoes": "Términos y condiciones",
+        "feedback": "Ouvidoria",
         "todosOsDireitosReservados": "2024 © {{BANCA_NOME}}. Todos los derechos reservados."
     },
     "paginas": {
