Feat: New layout on auxiliary pages

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -495,7 +495,8 @@
         "politica-privacidade": "Privacy Policy",
         "politica-aml": "AML Policy",
         "jogo-responsavel": "Responsible Gaming",
-        "termos-condicoes": "Terms and conditions"
+        "termos-condicoes": "Terms and conditions",
+        "termos-afiliados": "terms of use(Partnership)"
     },
     "jogos": {
         "tempoCompleto": "Full Time",
@@ -651,7 +652,8 @@
         "salvar_alteracoes": "Save Changes",
         "voltar": "Back",
         "logout_continue_login": "Yes, I would like to close the session",
-        "remain_active_session": "No, keep the other session active"
+        "remain_active_session": "No, keep the other session active",
+        "save_pdf": "Save PDF"
     },
     "conta": {
         "recuperarMinhaConta": "Recover my account!",
