Code review adjustments

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -496,7 +496,7 @@
         "politica-aml": "AML Policy",
         "jogo-responsavel": "Responsible Gaming",
         "termos-condicoes": "Terms and conditions",
-        "termos-afiliados": "terms of use(Partnership)"
+        "partnership-terms": "terms of use(Partnership)"
     },
     "jogos": {
         "tempoCompleto": "Full Time",
