--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -265,6 +265,8 @@
         "or": "OR",
         "geolocationError": "Please check your browser's location settings and try again.",
         "restricaoDeLocalizacao": "This feature is available only to users in Brazil.",
+        "stateRestriction": "This feature is not available in your state.",
+        "locationPermission": "To use this feature, you need to enable location in your browser.",
         "lastAccesses": "Last accesses",
         "action": "Action",
         "tax": "Tax",
