--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -267,6 +267,8 @@
         "or": "OU",
         "geolocationError": "Por favor, verifique a configuração de localização do seu navegador e tente novamente.",
         "restricaoDeLocalizacao": "Este recurso está disponível apenas para usuários no Brasil.",
+        "stateRestriction": "Este recurso não está disponivel para o seu estado.",
+        "locationPermission": "Para utilizar este recurso, é necessário ativar a localização no navegador.",
         "lastAccesses": "Últimos acessos",
         "action": "Ação",
         "session_alert": "Alerta de Sessão",
