--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -775,7 +775,11 @@
         "protectedByReCaptchaPart3": "do Google e os",
         "protectedByReCaptchaPart4": "Termos de Serviço",
         "protectedByReCaptchaPart5": "se aplicam.",
-        "registrationBeneficiariesSocialPrograms": "Os beneficiários de programas sociais não podem se registrar."
+        "registrationBeneficiariesSocialPrograms": "Os beneficiários de programas sociais não podem se registrar.",
+        "day":"Dia",
+        "month":"Mês",
+        "year":"Ano",
+        "brasil": "Brasil"
     },
     "registerCancel": {
         "titleCancelRegister": "Tem certeza que deseja cancelar seu registro?",
