--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -482,7 +482,7 @@
         "mensagem2": "Ao acessar, continuar a utilizar ou navegar no website {{BANCA_NOME}}, você aceita que utilizemos certos cookies de navegador com o objetivo de melhorar a sua experiência enquanto utiliza nosso site. {{BANCA_NOME}} apenas usa cookies para melhorar a sua experiência e não interferem com sua privacidade.",
         "jogueComResponsabilidade": "Jogue com responsabilidade.",
         "metodosDePagamento": "Metódos de pagamento",
-        "quemSomos": "Quem Somos",
+        "quemSomos": "Quem somos",
         "downloadApp": "Download app",
         "installPwa": "Instalar APP Cliente",
         "regras": "Regras",
@@ -495,7 +495,7 @@
         "todosOsDireitosReservados": "2024 © {{BANCA_NOME}}. Todos os direitos reservados."
     },
     "paginas": {
-        "quem-somos": "Quem Somos",
+        "quem-somos": "Quem somos",
         "regras": "Regras",
         "politica-privacidade": "Política de privacidade",
         "politica-aml": "Política AML",
@@ -658,7 +658,7 @@
         "voltar": "Voltar",
         "logout_continue_login": "Sim, gostaria de encerrar a sessão",
         "remain_active_session": "Não, continuar com a outra sessão",
-         "save_pdf": "Baixar PDF"
+        "save_pdf": "Baixar PDF"
     },
     "conta": {
         "recuperarMinhaConta": "Recuperar minha conta!",
