--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -274,7 +274,8 @@
         "vpn": "We have detected that you are accessing our website through a VPN. To ensure the security and integrity of the platform, we kindly ask you to disable the VPN or use a standard connection to proceed. If you believe this is an error, please contact support.",
         "logoutGeolocationErrorMessage": "You have been logged out for security reasons. We detected an abrupt change in your location that would be physically impossible to occur within the recorded time frame. If this was not caused by you, we recommend verifying your account.",
         "logoutGeolocationErrorTitle": "Access Interrupted: Inconsistent Location",
-        "logoutGeolocationErrorButtonLabel": "Close"
+        "logoutGeolocationErrorButtonLabel": "Close",
+        "clickHere": "Click here"
     },
     "bankAccounts": {
         "title" : "Cuentas bancarias",
@@ -450,7 +451,8 @@
     },
     "aplicativo": {
         "versaoDoAplicativoNaoSuportada": "The installed app version is no longer supported, please go to our website and download the new version.",
-        "baixarNovaVersao": "Download new version"
+        "baixarNovaVersao": "Download new version",
+        "downloadApp": "Download app"
     },
     "deposito": {
         "titulo": "Deposit",
@@ -487,7 +489,13 @@
         "jogoResponsavel": "Responsible Gaming",
         "termosECondicoes": "Terms and conditions",
         "feedback": "Feedback",
-        "todosOsDireitosReservados": "2024 © {{BANCA_NOME}}. All rights reserved."
+        "todosOsDireitosReservados": "2024 © {{BANCA_NOME}}. All rights reserved.",
+        "restrictedToAdults": "Restricted to individuals over 18 years old.",
+        "knowYourLimits": "Know your limits",
+        "ourApp": "Our App",
+        "institutional": "Institutional",
+        "licences": "Licenses",
+        "folowUp": "Follow us on social networks"
     },
     "paginas": {
         "quem-somos": "Who we are",
@@ -653,7 +661,9 @@
         "voltar": "Back",
         "logout_continue_login": "Yes, I would like to close the session",
         "remain_active_session": "No, keep the other session active",
-        "save_pdf": "Save PDF"
+        "save_pdf": "Save PDF",
+        "seeMore": "See more",
+        "seeLess": "See less"
     },
     "conta": {
         "recuperarMinhaConta": "Recover my account!",
