Fix: Translate of partnership terms page

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -506,7 +506,7 @@
         "politica-aml": "AML Policy",
         "jogo-responsavel": "Responsible Gaming",
         "termos-condicoes": "Terms and conditions",
-        "partnership-terms": "Terms of use(Partnership)"
+        "termos-afiliados": "Terms of use(Partnership)"
     },
     "jogos": {
         "tempoCompleto": "Full Time",
