--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -501,7 +501,7 @@
         "politica-aml": "Política AML",
         "jogo-responsavel": "Juego responsable",
         "termos-condicoes": "Términos y condiciones",
-        "partnership-terms": "Términos de uso (Asociaciones)"
+        "termos-afiliados": "Términos de uso (Asociaciones)"
     },
     "jogos": {
         "tempoCompleto": "Tiempo completo",
