--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -511,7 +511,7 @@
         "politica-aml": "Política AML",
         "jogo-responsavel": "Jogo responsável",
         "termos-condicoes": "Termos e condições",
-        "partnership-terms": "Termos de Uso (Afiliados)"
+        "termos-afiliados": "Termos de Uso (Afiliados)"
     },
     "jogos": {
         "tempoCompleto": "Tempo Completo",
