--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -448,7 +448,7 @@
         "identityVerify": "Verificar identidade",
         "identityVerifyNeeded": "Para prosseguir será necessário realizar a verificação de identidade antes.",
         "disapprovedIdentity": "Sua verificação de identidade foi reprovada. Para a realização de uma análise manual, por favor, entre em contato com o suporte.",
-        "maximumWithdrawal": "Saque máximo"
+        "maximumWithdrawalAmount": "Saque máximo"
     },
     "ativacaoEmail": {
         "ativacaoDeCadastro": "Ativação de Cadastro",
