feat: implementation and validation in the field of the maximum deposit amount and additions of its translations

--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -437,7 +437,8 @@
         "enterPixKey": "Seleccione el tipo de clave PIX",
         "minimumWithdrawal": "Retiro mínimo",
         "dailyMaximum": "Máximo diario",
-        "monthlyMaximum": "Máximo mensual"
+        "monthlyMaximum": "Máximo mensual",
+        "maximumDepositAmount": "Valor máximo"
     },
     "ativacaoEmail": {
         "ativacaoDeCadastro": "Activación de registro",
