Fix adjust  selects and translate

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -32,7 +32,7 @@
         "ajuda": "Help",
         "sair": "Logout",
         "perfil": "Profile",
-        "dadosPessoais": "Personal Data",
+        "dadosPessoais": "Personal data",
         "pix": "PIX",
         "saque": "Withdrawal",
         "saques": "Withdrawals",
