--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -32,7 +32,7 @@
         "ajuda": "Ajuda",
         "sair": "Sair",
         "perfil": "Perfil",
-        "dadosPessoais": "Dados Pessoais",
+        "dadosPessoais": "Dados pessoais",
         "pix": "PIX",
         "saque": "Saque",
         "saques": "Saques",
