--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -287,7 +287,7 @@
         "countryCode": "Código",
         "complement": "Complemento",
         "login": "Login",
-        "createAccount": "Criar Conta",
+        "createAccount": "Criar conta",
         "passwordRequirements": "Requisitos para uma senha segura:",
         "passwordLevel": "Nivel da senha:",
         "weak": "Fraco",
