--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -287,7 +287,8 @@
         "passwordLevel": "Nivel de la contraseña:",
         "weak": "Debil",
         "medium": "Medio",  
-        "strong": "Fuerte"
+        "strong": "Fuerte",
+        "kindLogin": "Iniciar sesión con"
     },
     "bankAccounts": {
         "title" : "Bank Accounts",
