feature: validations for new registration screen

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -288,7 +288,8 @@
         "weak": "Weak",
         "medium": "Medium",
         "strong": "Strong",
-        "kindLogin": "Login with"
+        "kindLogin": "Login with",
+        "errorMinorAge": "underage."
     },
     "bankAccounts": {
         "title" : "Cuentas bancarias",
