--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -288,7 +288,8 @@
         "weak": "Debil",
         "medium": "Medio",  
         "strong": "Fuerte",
-        "kindLogin": "Iniciar sesión con"
+        "kindLogin": "Iniciar sesión con",
+        "errorMinorAge": "menor de edad."
     },
     "bankAccounts": {
         "title" : "Bank Accounts",
