--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -786,7 +786,8 @@
         "verified_identity": "Identidad verificada!",
         "Identity_not_verified": "Identidad no verificada, póngase en contacto con el servicio de asistencia.",
         "account_protected": "Su cuenta protegida!",
-        "register_description": "Para tener acceso a todas las funciones del sitio, tendrá que registrar su foto de seguridad. Su imagen es confidencial y no será compartida."
+        "register_description": "Para tener acceso a todas las funciones del sitio, tendrá que registrar su foto de seguridad. Su imagen es confidencial y no será compartida.",
+        "checkNow": "Verificar ahora"
     },
     "register": {
         "signupWith": "Regístrate en Google",
