feature: new layout register v3

--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -156,6 +156,7 @@
         "esqueceuASenha": "Forgot password?",
         "naoPossuiUmaConta": "Don't have an account?",
         "jaPossuiUmaConta": "Already have an account?",
+        "logIn": "Log in",
         "usuario": "User",
         "senha": "Password",
         "masculino": "Male",
