--- a/src/locale/i18n/es.json
+++ b/src/locale/i18n/es.json
@@ -153,6 +153,7 @@
         "esqueceuASenha": "¿Olvidaste tu contraseña?",
         "naoPossuiUmaConta": "¿No tienes una cuenta?",
         "jaPossuiUmaConta": "¿Ya tienes una cuenta?",
+        "logIn": "Iniciar sesión",
         "usuario": "Usuario",
         "senha": "Contraseña",
         "masculino": "Masculino",
