--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -156,6 +156,7 @@
         "esqueceuASenha": "Esqueceu a senha?",
         "naoPossuiUmaConta": "Não possui uma conta?",
         "jaPossuiUmaConta": "Já possui uma conta?",
+        "logIn": "Faça o login",
         "usuario": "Usuário",
         "senha": "Senha",
         "masculino": "Masculino",
