--- a/src/locale/i18n/en.json
+++ b/src/locale/i18n/en.json
@@ -427,10 +427,9 @@
         "informeSeuEmail": "Enter your email to receive the password reset link.",
         "solicitarCodigoRedefinicao": "Request reset code",
         "digiteSuaSenha": "Type your password",
-        "minimumCharactersPassword": "Minimum 8 characters",
-        "lowercaseLetter": "Minimum of one lowercase letter",
-        "uppercaseLetter": "Minimum of one uppercase letter",
-        "specialChar": "Minimum of one special character (!, @, #, $, %, &, *)"
+        "minimumCharactersPassword": "Password must be at least 8 characters long",
+        "mustContainOneUppercaseAndOneLowercaseLetter": "Must contain one uppercase and one lowercase letter",
+        "specialChar": "Must contain a special character (Ex.: @, !, $, #...)"
     },
     "saques": {
         "enterAmountWithdrawal": "Enter the amount for the withdrawal",
