--- a/src/locale/i18n/pt.json
+++ b/src/locale/i18n/pt.json
@@ -432,10 +432,9 @@
         "informeSeuEmail": "Informe seu e-mail para receber o link de redefinição de senha.",
         "solicitarCodigoRedefinicao": "Solicitar código de redefinição",
         "digiteSuaSenha": "Digite sua senha",
-        "minimumCharactersPassword": "Mínimo de 8 caracteres",
-        "lowercaseLetter": "Mínimo de uma letra minúscula",
-        "uppercaseLetter": "Mínimo de uma letra maiúscula",
-        "specialChar": "Mínimo de um caractere especial (!, @, #, $, %, &, *)"
+        "minimumCharactersPassword": "A senha deve possuir no mínimo 8 caracteres",
+        "mustContainOneUppercaseAndOneLowercaseLetter": "Deve conter uma letra maiúscula e uma minúscula",
+        "specialChar": "Deve conter um caractere especial (Ex.: @, !, $, #...)"
     },
     "saques": {
         "enterAmountWithdrawal": "Informe o valor para saque",
